Version 1.94

- Implemented SPR pseudo-variable for hardware registers
- Cleaned up handling of -o option for .dat, .elf, and .binary

Version 1.93

- Made for loop output more idiomatic
- Print symbolic constants rather than the values they resolve to
- Fixed illegal characters in file names used as class names
- Added some debug directives
- Made -o option more useful with --binary
- Really fixed --binary checksum setting
- Added support for setting _clkfreq and _clkmode

Version 1.92

- Made the lookup/lookdown output code compatible with more recent gccs
- Fixed --binary checksum calculation

Version 1.91

- Preserve comments in Spin code.
- Recognize foo.long[N] syntax.
- Use C for loops for more Spin repeat loops.
- Use memset for the common case of filling memory with 0.
- Added clksPet and clkmode.
- Preserve original case of Spin identifiers (unless --normalize is
  given).
- Automatically add volatile qualifier to class variables if some
  class members are accessed via the address operator.
- Added --catalina option to run convert to C then run Catalina C compiler.

Version 1.05

- Fixed a problem with double negation or negation of boolean operators
  being printed as a predecrement.
- Fixed usage of ID[n] in PASM code (where ID is a constant).

Version 1.04

- Fix precedence of NOT operator
- Add quoting for spaces inside file names
- Produce an error for redefined labels in DAT sections.
- Rename constants that start with an _ to avoid conflicts with C.
- Fix "reversed" range expressions like OUTA[9..10].

Version 1.03

- Use for() loop instead of do/while for simple counting loops
- Added a -o option to specify the output file name
- Fixed error messages after #include (so correct line number and file
  information is preserved)
- Made the search paths for #include and OBJ sections relative to the
  currently processed file.
- Added --binary output option to produce a .binary file
- Fixed a bug in the DAT section output for classes with names that