@@ -1,6 +1,8 @@
 ''
 '' test of address operators
 ''
+#define TRIPLEAT
+
 CON
   _clkmode = xtal1 + pll16x
   _clkfreq = 80_000_000
